feat(identity): revoke session on logout